name:                note2self
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/note2self#readme
license:             BSD3
license-file:        LICENSE
author:              Austin Huang
copyright:           2020 Austin Huang
category:            CLI
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable n2s
  hs-source-dirs:      cli
  main-is:             Main.hs
  other-modules:       Backend, Parser
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , sqlite-simple
                     , optparse-applicative
                     , optparse-generic
                     , time

executable server
  hs-source-dirs:      server
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , sqlite-simple
                     , servant-server
                     , text
                     , warp
