name:                note2self
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/note2self#readme
license:             BSD3
license-file:        LICENSE
author:              Austin Huang
copyright:           2020 Austin Huang
category:            CLI
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable n2s
  hs-source-dirs:      cli
  main-is:             Main.hs
  other-modules:       Backend, Parser
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , sqlite-simple
                     , optparse-applicative
                     , optparse-generic
                     , time

executable server
  hs-source-dirs:      server, shared
  main-is:             Main.hs
  other-modules:       DB
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , directory
                     , servant-server
                     , sqlite-simple
                     , servant-swagger
                     , swagger2
                     , text
                     , time
                     , wai-cors
                     , wai-logger
                     , warp

executable crawler
  hs-source-dirs:      crawler, shared
  main-is:             Main.hs
  other-modules:       DB
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , directory
                     , http-conduit
                     , network-uri
                     , pretty-simple
                     , process >= 1.6.9.0
                     , scalpel
                     , sqlite-simple
                     , tagsoup
                     , text
                     , time

-- executable model
--  hs-source-dirs:      models
--  ld-options:          -static
--  ghc-options:         -fPIC
--  main-is:             TestServe.hs
--  default-language:    Haskell2010
--  build-depends:       base >= 4.7 && < 5
--                     , hasktorch
