name:                note2self
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/note2self#readme
license:             BSD3
license-file:        LICENSE
author:              Austin Huang
copyright:           2020 Austin Huang
category:            CLI
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable n2s
  hs-source-dirs:      cli, shared
  main-is:             Main.hs
  other-modules:       Backend, Parser, DB
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , directory
                     , filepath
                     , mtl
                     , sqlite-simple
                     , optparse-applicative
                     , optparse-generic
                     , text
                     , time

executable server
  hs-source-dirs:      server, shared
  main-is:             Main.hs
  other-modules:       DB, OCR, Models, SQL, CrawlTools
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , directory
                     , filepath
                     , hasktorch
                     , mtl
                     , network-uri
                     , pretty-simple
                     , process >= 1.6.9.0
                     , scalpel
                     , servant-server
                     , sqlite-simple
                     , servant-swagger
                     , swagger2
                     , text
                     , time
                     , tokenizers
                     , wai-cors
                     , wai-logger
                     , warp
  extra-lib-dirs:     ./deps/tokenizers
  extra-libraries:
      tokenizers_haskell

executable crawler
  hs-source-dirs:      crawler, shared
  main-is:             Main.hs
  other-modules:       DB, OCR, CrawlTools, SQL
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , directory
                     , filepath
                     , http-conduit
                     , network-uri
                     , pretty-simple
                     , process >= 1.6.9.0
                     , scalpel
                     , sqlite-simple
                     , tagsoup
                     , text
                     , time
