name:                openmemex
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/austinvhuang/openmemex#readme
license:             Apache
license-file:        LICENSE
author:              Austin Huang
copyright:           2021 Austin Huang
category:            Tools
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable omx
  hs-source-dirs:      server, shared
  main-is:             Main.hs
  other-modules:       DB, Models, SQL, CrawlTools, Date, API, ArgParser
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , directory
                     , filepath
                     , hasktorch
                     , mtl
                     , network-uri
                     , optparse-applicative
                     , optparse-generic
                     , pretty-simple
                     , process >= 1.6.9.0
                     , scalpel
                     , servant-server
                     , sqlite-simple
                     , servant-swagger
                     , swagger2
                     , text
                     , time
                     , wai-cors
                     , wai-logger
                     , warp

executable crawler
  hs-source-dirs:      crawler, shared
  main-is:             Main.hs
  other-modules:       DB, CrawlTools, SQL, Date
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , directory
                     , filepath
                     , http-conduit
                     , mtl
                     , network-uri
                     , pretty-simple
                     , process >= 1.6.9.0
                     , scalpel
                     , sqlite-simple
                     , tagsoup
                     , text
                     , time

executable migrate
  hs-source-dirs:      migrations, shared
  main-is:             Main.hs
  other-modules:       DB, Migration
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , directory
                     , filepath
                     , pretty-simple
                     , sqlite-simple
                     , mtl
                     , text
                     , time
