[package]
name = "frontend-rs"
version = "0.1.0"
authors = ["austinvhuang <austinh@alum.mit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.74"
wasm-bindgen-test = "0.2"
# yew = "0.17.4"
yew = "0.18.0"
# yew-router = "0.14.0"
yew-router = "0.15.0"
serde = "1.0.120"
serde_json = "1.0"
anyhow = "1.0.38"
wasm-logger = "0.2.0"
log = "0.4.6"
url = "2.2.0"
urlencoding = "2.1.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[lib]
crate-type = ["cdylib", "rlib"]
