[package]
name = "frontend"
version = "0.1.0"
authors = ["austinvhuang <openmemex@gmail.com>"]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2.78"
wasm-bindgen-test = "0.2"
yew = "0.18.0"
yew-router = "0.15.0"
serde = "1.0.120"
serde_json = "1.0"
anyhow = "1.0.38"
wasm-logger = "0.2.0"
log = "0.4.6"
url = "2.2.0"
urlencoding = "2.1.0"
chrono = "0.4.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[lib]
crate-type = ["cdylib", "rlib"]
