
name:                model
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/austinvhuang/note2self#readme
author:              Austin Huang
copyright:           2020 Austin Huang
category:            CLI
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable model
  hs-source-dirs:      .
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hasktorch
                     , libtorch-ffi
                     , libtorch-ffi-helper
--  ld-options:          -static
--  ghc-options:         -fPIC
