[package]
name = "yew-test"
version = "0.1.0"
authors = ["austinvhuang <austinh@alum.mit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.67"
yew = "0.17"

[lib]
crate-type = ["cdylib", "rlib"]
