[package]
name = "yew-test"
version = "0.1.0"
authors = ["austinvhuang <austinh@alum.mit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.67"
wasm-bindgen-test = "0.2"
yew = "0.17"
serde = "1.0.120"
anyhow = "1.0.38"

[lib]
crate-type = ["cdylib", "rlib"]
